--- a/.storybook/head.html
+++ b/.storybook/head.html
@@ -1,1 +1,3 @@
-<script src="holder.min.js"></script>
+<script src="holder.min.js">
+</script>
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css">
