Added comment to head

--- a/.storybook/head.html
+++ b/.storybook/head.html
@@ -1,3 +1,4 @@
 <script src="holder.min.js">
 </script>
+<!-- Bootstrap -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css">
